force-app/main/default/objects/OPP_Subjectivity__c/OPP_Subjectivity__c.object-meta.xml
<CustomObject>
    <label>Subjectivity</label>
    <nameField>
        <label>Subjectivity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subjectivities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>