force-app/main/default/objects/OPP_Subjectivity__c/fields/Clear_is__c.field-meta.xml
<CustomField>
    <fullName>Clear_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clear</label>
    <type>Checkbox</type>
</CustomField>