force-app/main/default/objects/OPP_Subjectivity__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <label>Detail</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>