force-app/main/default/objects/OPP_Subjectivity__c/fields/Panel_lk__c.field-meta.xml
<CustomField>
    <fullName>Panel_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Panel</label>
    <referenceTo>OPP_Panel__c</referenceTo>
    <relationshipLabel>Subjectivity</relationshipLabel>
    <relationshipName>Subjectivity</relationshipName>
    <type>Lookup</type>
</CustomField>