force-app/main/default/objects/OPP_Subjectivity__c/fields/tmpDetail__c.field-meta.xml
<CustomField>
    <fullName>tmpDetail__c</fullName>
    <label>tmpDetail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>